--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -5,20 +5,19 @@ RUN apk add nginx
 RUN apk add openssh
 RUN apk add openssl
 # RUN apk add supervisor
-# RUN apk add openrc
+RUN apk add openrc  
+# openrc - HTTP and reverse proxy server 
 
 RUN adduser -D "user"
 RUN echo "user:password" | chpasswd
 
-# COPY nginx.conf /etc/nginx/
-# COPY index.html /www/
-# COPY start_nginx.sh .
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY start_nginx.sh .
 # COPY supervisor.conf /etc/supervisord.conf
 
 RUN openssl req -newkey rsa:2048 -x509 -sha256 -days 365 -nodes -out /etc/ssl/certs/localhost.crt \
 -keyout /etc/ssl/certs/localhost.key -subj "/C=RU/ST=MSK/L=MSK/O=21school/CN=www.example.com"
 
+EXPOSE 80 443
 
 CMD start_nginx.sh
-
-EXPOSE 80 443
