--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,30 +1,33 @@
-server {
-	listen 80;
-	listen [::]:80;
-	server_name localhost;
+user	user;
 
-	return 301 https://$server_name$request_uri;
-}
+http {
+	server {
+		listen 80;
+		listen [::]:80;
+		server_name localhost;
+		return 301 https://$server_name$request_uri;
+	}
 
-server {
-        listen 443 ssl ;
-        listen [::]:443 ssl ;
+	server {
+			listen 443 ssl;
+			listen [::]:443 ssl;
+			server_name localhost www.localhost;
 
-        ssl on;
-        ssl_certificate /etc/ssl/certs/localhost.crt;
-        ssl_certificate_key /etc/ssl/certs/localhost.key;
+			ssl on;
+			ssl_certificate /etc/ssl/certs/localhost.crt;
+			ssl_certificate_key /etc/ssl/certs/localhost.key;
 
-        root /var/www/html;
+			root /var/www;
 
-        index index.html index.htm index.nginx-debian.html index.php;
+			index index.html index.htm index.nginx-debian.html index.php;
 
-        server_name localhost www.localhost;
 
-        location / {
-                autoindex on;
-        }
-        location ~ \.php$ {
-                include snippets/fastcgi-php.conf;
-                fastcgi_pass unix:run/php/php7.3-fpm.sock;
-        }
+			location / {
+					autoindex on;
+			}
+			location ~ \.php$ {
+					include snippets/fastcgi-php.conf;
+					fastcgi_pass unix:run/php/php7.3-fpm.sock;
+			}
+	}
 }
