for working at school

--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,5 +1,12 @@
 user	user;
 
+worker_processes                auto; # it will be determinate automatically by the number of core
+
+events {
+    worker_connections          1024;
+}
+
+
 http {
 	server {
 		listen 80;
@@ -17,9 +24,9 @@ http {
 			ssl_certificate /etc/ssl/certs/localhost.crt;
 			ssl_certificate_key /etc/ssl/certs/localhost.key;
 
-			root /var/www;
+			root /www;
 
-			index index.html index.htm index.nginx-debian.html index.php;
+			index index.html;
 
 
 			location / {
