some fixes on nginx

--- a/srcs/nginx/nginx-deployment.yaml
+++ b/srcs/nginx/nginx-deployment.yaml
@@ -21,6 +21,10 @@ spec:
           - name: nginx
             image: nginx
             imagePullPolicy: Never
+            ports:
+            - containerPort: 80
+            - containerPort: 22
+            - containerPort: 443
 
 ---
 apiVersion: v1
