--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -14,27 +14,40 @@ http {
 		server_name localhost;
 		return 301 https://$server_name$request_uri;
 	}
-
 	server {
 			listen 443 ssl;
 			listen [::]:443 ssl;
-			server_name localhost www.localhost;
-
-			ssl on;
+			server_name localhost;
 			ssl_certificate /etc/ssl/certs/localhost.crt;
 			ssl_certificate_key /etc/ssl/certs/localhost.key;
-
 			root /www;
-
 			index index.html;
+        	
+			location = /50x.html {
+              root              /var/lib/nginx/html;
+        	}
+        	location /wordpress {
+            return 307 http://192.168.99.101:5050/;
+        	}
 
+    		location ~ \/phpmyadmin {
+       		rewrite ^/phpmyadmin(/.*)$ $1 break;
+        	proxy_set_header X-Real-IP  $remote_addr;
+        	proxy_set_header X-Forwarded-For $remote_addr;
+        	proxy_set_header Host $host;
+        	proxy_set_header X-Forwarded-Proto https;
+        	proxy_pass	http://$host:5000;
+    		}
 
-			location / {
-					autoindex on;
-			}
-			location ~ \.php$ {
-					include snippets/fastcgi-php.conf;
-					fastcgi_pass unix:run/php/php7.3-fpm.sock;
-			}
+		    location ~ \/index.php {
+               return 301   http://$host/phpmyadmin/;
+        	}
+			# location ~ \/ {
+				
+			# }
+			# location ~ \/ {
+
+			# }
+
 	}
 }
