--- a/srcs/nginx/nginx-deployment.yaml
+++ b/srcs/nginx/nginx-deployment.yaml
@@ -18,14 +18,13 @@ spec:
         app: nginx
     spec:
         containers:
-          - name: nginx
+          - name: nginx-container
             image: nginx
             imagePullPolicy: Never
             ports:
             - containerPort: 80
             - containerPort: 22
             - containerPort: 443
-
 ---
 apiVersion: v1
 kind: Service
