nginx ok, but mysql pvc problem

--- a/srcs/mysql/Dockerfile
+++ b/srcs/mysql/Dockerfile
@@ -5,9 +5,10 @@ RUN apk add mariadb
 RUN apk add mariadb-client
 RUN apk add openrc
 
+COPY my.cnf /etc/
+COPY database .
 COPY wordpress.sql .
 COPY start_mysql.sh .
-RUN chmod +x start_mysql.sh
 
 VOLUME ["/var/lib/mysql"]
 
