--- a/srcs/phpmyadmin/phpmyadmin-deployment.yaml
+++ b/srcs/phpmyadmin/phpmyadmin-deployment.yaml
@@ -30,7 +30,7 @@ metadata:
   labels:
     app: phpmyadmin
   annotations:
-    metallb.universe.tf/allow-shared-ip: wp
+    metallb.universe.tf/allow-shared-ip: config
 spec:
   externalTrafficPolicy: Cluster
   type: LoadBalancer
