--- a/srcs/wordpress/nginx.conf
+++ b/srcs/wordpress/nginx.conf
@@ -1,13 +1,13 @@
 server
 {
-    listen 5050 default;
-    listen 5050[::]:5050 default;
-    root /www/wordpress;
-	index index.php;
-    server_name _;
+    listen 5050         default_server;
+    listen [::]:5050    default_server;
+    root                    /www/wordpress;
+	index                   index.php;
+    server_name             _;
     location ~ \.php$ {
-        fastcgi_pass      127.0.0.1:9000;
-        include           fastcgi.conf;
+        fastcgi_pass        127.0.0.1:9000;
+        include             fastcgi.conf;
     }
 
 }
