--- a/srcs/ftps/ftps-deployment.yaml
+++ b/srcs/ftps/ftps-deployment.yaml
@@ -43,7 +43,7 @@ metadata:
   labels:
     app: ftps
   annotations:
-    metallb.universe.tf/allow-shared-ip: wp
+    metallb.universe.tf/allow-shared-ip: config
 spec:
   externalTrafficPolicy: Cluster
   type: LoadBalancer
