--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user	user;
+user							www;
 
 worker_processes                auto; # it will be determinate automatically by the number of core
 
@@ -8,21 +8,30 @@ events {
 
 
 http {
+	include						/etc/nginx/mime.types;
+	default_type                application/octet-stream;
+    sendfile                    on;
+    access_log                  /var/log/nginx/access.log;
+    keepalive_timeout           3000;
+	
 	server {
-		listen 80;
-		listen [::]:80;
-		server_name localhost;
-		return 301 https://$server_name$request_uri;
+		listen					80;
+		listen					[::]:80;
+		server_name				localhost;
+		return 301				https://$host$request_uri;
 	}
 	server {
-			listen 443 ssl;
-			listen [::]:443 ssl;
-			server_name localhost;
-			ssl_certificate /etc/ssl/certs/localhost.crt;
-			ssl_certificate_key /etc/ssl/certs/localhost.key;
-			root /www;
-			index index.html;
-        	
+			listen						443 ssl;
+			listen						[::]:443 ssl;
+			ssl_certificate 			/etc/ssl/certs/localhost.crt;
+			ssl_certificate_key			/etc/ssl/certs/localhost.key;
+			server_name					localhost;
+			root						/www;
+			index						index.html;
+			rewrite ^([^.]*[^/])$ $1/ permanent;
+			client_max_body_size		32m;
+			error_page					500 502 503 504  /50x.html;
+
 			location = /50x.html {
               root              /var/lib/nginx/html;
         	}
@@ -36,8 +45,8 @@ http {
         	proxy_set_header X-Real-IP  $remote_addr;
         	proxy_set_header X-Forwarded-For $remote_addr;
         	proxy_set_header Host $host;
-        	proxy_set_header X-Forwarded-Proto https;
-        	proxy_pass	http://$host:5000;
+        	proxy_set_header	X-Forwarded-Proto https;
+        	proxy_pass			http://$host:5000;
     		}
 
 		    location ~ \/index.php {
