--- a/srcs/phpmyadmin/nginx.conf
+++ b/srcs/phpmyadmin/nginx.conf
@@ -1,7 +1,7 @@
 server
 {
     listen 5000 default;
-    listen 5000[::]:5000 default;
+    listen [::]:5000 default;
     root /www/phpmyadmin;
 	index index.php;
     server_name _;
