--- a/srcs/ftps/ftps-deployment.yaml
+++ b/srcs/ftps/ftps-deployment.yaml
@@ -11,7 +11,7 @@ spec:
       app: ftps
   template:
     metadata:
-      name: ftps-pod
+      name: ftps
       labels:
         app: ftps
     spec:
@@ -21,12 +21,11 @@ spec:
             imagePullPolicy: Never
             ports:
             - containerPort: 21
-            - containerPort: 21000
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ftps-pv-claim
+  name: ftps-pvc
   labels:
     app: ftps
 spec:
@@ -47,11 +46,9 @@ metadata:
 spec:
   externalTrafficPolicy: Cluster
   type: LoadBalancer
-  loadBalancerIP: 192.168.99.101
+  loadBalancerIP: 192.168.99.220
   selector:
     app: ftps
   ports:
-  - name: ftps
+  - name: ftps-commands
     port: 21
-  - name: ftps-data
-    port: 21000
