--- a/srcs/ftps/ftps-deployment.yaml
+++ b/srcs/ftps/ftps-deployment.yaml
@@ -15,11 +15,11 @@ spec:
       labels:
         app: ftps
     spec:
-        containers:
-          - name: ftps-container
-            image: ftps
-            imagePullPolicy: Never
-            ports:
+      containers:
+        - name: ftps-container
+          image: ftps
+          imagePullPolicy: Never
+          ports:
             - containerPort: 21
 ---
 apiVersion: v1
@@ -50,5 +50,5 @@ spec:
   selector:
     app: ftps
   ports:
-  - name: ftps-commands
-    port: 21
+    - name: ftps-command
+      port: 21
