--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -15,7 +15,7 @@ xferlog_enable=YES
 local_umask=022
 local_enable=YES
 dirmessage_enable=YES
-ftpd_banner=Welcome to the club Buddy!
+ftpd_banner=Welcome, friend!
 pasv_address=192.168.99.220
 ssl_enable=YES
 allow_anon_ssl=NO
