--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -1,13 +1,14 @@
 FROM alpine:latest
 
 RUN apk update
-RUN apk add grafana
+RUN apk add grafana --repository=http://dl-3.alpinelinux.org/alpine/edge/testing/
 
-# RUN wget https://dl.grafana.com/oss/release/grafana-6.7.2.linux-amd64.tar.gz \
-# && tar -zxvf grafana-6.7.2.linux-amd64.tar.gz1
 
-COPY start_grafana.sh .
+COPY influxdb.yaml /usr/share/grafana/conf/provisioning/datasources/influxdb.yaml
+COPY dashboards.yaml /usr/share/grafana/conf/provisioning/dashboards/dashboards.yaml
+# COPY /dashboards/* /var/lib/grafana/dashboards/
 
 EXPOSE 3000
 
-CMD sh start_grafana.sh
+ENTRYPOINT [ "grafana-server", "--homepath=/usr/share/grafana" ]
+# CMD ["grafana-server"]
