--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -5,7 +5,7 @@ RUN apk add grafana --repository=http://dl-3.alpinelinux.org/alpine/edge/testing
 
 
 COPY influxdb.yaml /usr/share/grafana/conf/provisioning/datasources/influxdb.yaml
-COPY dashboards.yaml /usr/share/grafana/conf/provisioning/dashboards/dashboards.yaml
+# COPY dashboards.yaml /usr/share/grafana/conf/provisioning/dashboards/dashboards.yaml
 # COPY /dashboards/* /var/lib/grafana/dashboards/
 
 EXPOSE 3000
