every service works

--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -1,14 +1,14 @@
 FROM alpine:latest
 
 RUN apk update
+# RUN apk add openssl
 RUN apk add grafana --repository=http://dl-3.alpinelinux.org/alpine/edge/testing/
 
 
-COPY influxdb.yaml /usr/share/grafana/conf/provisioning/datasources/influxdb.yaml
+# COPY influxdb.yaml /usr/share/grafana/conf/provisioning/datasources/influxdb.yaml
 # COPY dashboards.yaml /usr/share/grafana/conf/provisioning/dashboards/dashboards.yaml
 # COPY /dashboards/* /var/lib/grafana/dashboards/
 
 EXPOSE 3000
 
 ENTRYPOINT [ "grafana-server", "--homepath=/usr/share/grafana" ]
-# CMD ["grafana-server"]
