--- a/srcs/influxdb/Dockerfile
+++ b/srcs/influxdb/Dockerfile
@@ -3,5 +3,7 @@ FROM alpine:latest
 RUN apk update
 RUN apk add influxdb
 
+COPY start_influxdb.sh .
+
 EXPOSE 8086
-ENTRYPOINT ["influxd"]
+CMD sh start_influxdb.sh
