--- a/srcs/ftps/ftps-deployment.yaml
+++ b/srcs/ftps/ftps-deployment.yaml
@@ -21,6 +21,8 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 21
+            - containerPort: 20
+            - containerPort: 21000
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -50,5 +52,9 @@ spec:
   selector:
     app: ftps
   ports:
-    - name: ftps-command
+    - name: ftp-command
       port: 21
+    - name: ftp-data
+      port: 20
+    - name: ftp-psv
+      port: 21000
