--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -1,12 +1,20 @@
 FROM alpine:latest
 
 RUN apk update
-RUN apk add grafana --repository=http://dl-3.alpinelinux.org/alpine/edge/testing/
+RUN apk add wget
+RUN apk add libc6-compat
+RUN wget https://dl.grafana.com/oss/release/grafana-7.1.3.linux-amd64.tar.gz
+RUN tar -xf grafana-7.1.3.linux-amd64.tar.gz
+RUN rm -rf grafana-7.1.3.linux-amd64.tar.gz
 
-COPY datasource.yaml /usr/share/grafana/conf/provisioning/datasources/
-COPY dashboards.yaml /usr/share/grafana/conf/provisioning/dashboards/
+ENV PATH=/grafana-7.1.3/bin:$PATH
+WORKDIR /grafana-7.1.3
+
+COPY datasource.yaml conf/provisioning/datasources/
+COPY dashboards.yaml conf/provisioning/dashboards/
+
 COPY /dashboards/* /var/lib/grafana/dashboards/
 
 EXPOSE 3000
 
-ENTRYPOINT [ "grafana-server", "--homepath=/usr/share/grafana" ]
+ENTRYPOINT [ "grafana-server"]
